--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "root",
+  "name": "gist-tool",
   "private": true,
   "devDependencies": {
+    "husky": "^3.1.0",
     "lerna": "^3.18.5"
   }
 }
