--- a/package.json
+++ b/package.json
@@ -1,8 +1,17 @@
 {
   "name": "gist-tool",
   "private": true,
+  "scripts": {
+    "lint": "lerna run lint",
+    "test": "lerna run test"
+  },
   "devDependencies": {
     "husky": "^3.1.0",
     "lerna": "^3.18.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lerna run --concurrency 1 --stream precommit"
+    }
   }
 }
