--- a/packages/back/package.json
+++ b/packages/back/package.json
@@ -5,6 +5,7 @@
   "author": "",
   "license": "MIT",
   "scripts": {
+    "precommit": "lint-staged",
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -39,6 +40,7 @@
     "@typescript-eslint/parser": "^2.8.0",
     "eslint": "^6.6.0",
     "jest": "^24.9.0",
+    "lint-staged": "^9.4.3",
     "prettier": "^1.18.2",
     "supertest": "^4.0.2",
     "ts-jest": "^24.1.0",
@@ -60,5 +62,11 @@
     },
     "coverageDirectory": "./coverage",
     "testEnvironment": "node"
+  },
+  "lint-staged": {
+    "src/**/*.ts": [
+      "npm run lint",
+      "git add"
+    ]
   }
 }
