--- a/packages/front/package.json
+++ b/packages/front/package.json
@@ -13,6 +13,7 @@
     "typescript": "3.7.2"
   },
   "scripts": {
+    "precommit": "lint-staged",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "lint": "eslint src/**/*.ts",
@@ -37,6 +38,13 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.8.0",
     "@typescript-eslint/parser": "^2.8.0",
-    "eslint": "^6.6.0"
+    "eslint": "^6.6.0",
+    "lint-staged": "^9.4.3"
+  },
+  "lint-staged": {
+    "src/**/*.tsx?": [
+      "npm run lint",
+      "git add"
+    ]
   }
 }
