--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "lint": "lerna run lint --stream",
     "test": "lerna run test --stream",
-    "start": "lerna run start --stream"
+    "start": "lerna run start --stream",
+    "postinstall": "lerna bootstrap"
   },
   "devDependencies": {
     "husky": "^3.1.0",
